--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2024"
 [dependencies]
 axum = "0.8.1"
 tokio = { version = "1.44.0", features = ["full"] }
-sqlx = {version = "0.8.3", features = ["postgres","runtime-tokio","tls-native-tls","macros"]}
+sqlx = {version = "0.8.3", features = ["postgres","runtime-tokio","tls-native-tls","macros","uuid"]}
 serde = {version = "1.0.219", features = ["derive"]}
 serde_json = {version = "1.0.140"}
 dotenvy = "0.15.7"
+uuid = {version = "1.15.1", features = ["v4", "serde"]}
+sqlx-cli = "0.8.3"
