--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,3 +14,4 @@ uuid = {version = "1.15.1", features = ["v4", "serde"]}
 sqlx-cli = "0.8.3"
 utoipa = {version = "5", features = ["axum_extras"]}
 utoipa-swagger-ui = { version = "9", features = ["axum"] }
+tower-http = { version = "0.6.2", features = ["fs"] }
